--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "chai-prime-project",
   "version": "1.0.0",
   "description": "a small prime and chai project ",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "js",
@@ -13,5 +14,8 @@
     "chai"
   ],
   "author": "Jatin Agrawal",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
