--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Jatin Agrawal",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prettier": "^3.5.1"
   }
 }
